Refatoração das classes